test/Fail/Issue586b.agda
-- Andreas, 2014-09-09

{-# TERMINATING #-}
Foo : Set
Foo = Foo
