test/Fail/Issue586b.err
Issue586b.agda:3.1-20: error: [SafeFlagTerminating]
Cannot use TERMINATING pragma with safe flag.
